--- a/Gini Coefficient_Digital Skills.ipynb
+++ b/Gini Coefficient_Digital Skills.ipynb
@@ -24,7 +24,8 @@
     "import sql_functions as sf\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from scipy import stats\n"
+    "from scipy import stats\n",
+    "from scipy.stats import pearsonr\n"
    ]
   },
   {
@@ -489,7 +490,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Countries missing in the 'Entity' column: {'Malta', 'European Union - 27 countries (from 2020)', 'Germany'}\n"
+      "Countries missing in the 'Entity' column: {'Germany', 'Malta', 'European Union - 27 countries (from 2020)'}\n"
      ]
     }
    ],
@@ -1922,14 +1923,11 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pearsonr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[38], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Assuming df_gini_corr is your DataFrame, and 'Gini coefficient' and 'total_ds' are your column names\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m correlation, p_value \u001b[38;5;241m=\u001b[39m \u001b[43mpearsonr\u001b[49m(df_gini_corr[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGini coefficient\u001b[39m\u001b[38;5;124m'\u001b[39m], df_gini_corr[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtotal_ds\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPearson correlation: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcorrelation\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP-value: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp_value\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pearsonr' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pearson correlation: -0.4026873127240082\n",
+      "P-value: 0.03729569433521863\n"
      ]
     }
    ],
@@ -1958,7 +1956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1995,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
